* Small socket fix (thanks tremor)
* Search tab goes bold if set to (thanks naga)
* Hopefully fixed an UPnP crash
* User commands in file lists (thanks joakim tosteberg)
* ADC url's clickable (thanks naga)
* Improved search timer to avoid spamming hub (thanks naga)
* Redid some of the hash storage code, should be slighly more efficient
* Share is cached for faster startup

-- 0.668 2004-11-30 --
* Fixed crash on open own filelist (thanks sulan)
* Added option to make /join open a new window (thanks ullner)
* Added mailto: to link-clicking (thanks ullner)
* Fixed stack overflow with excessive xml nesting (thanks farcry)
* Fixed virtual name issue with invalid chars in the virtual name (thanks farcry)
* Fixes to ADC implementation, see http://developer.berlios.de/projects/ddc/ for a 
  somewhat compatible hub in development
* Some linux patches (thanks tim burton)
* PgUp/PgDn now scroll the chat window (thanks jonathan stone)
* Small fix with line history (thanks jonathan stone)
* Added option to use separate TCP and UDP ports
* Fixed a raw command guessing bug (thanks garg)
* [bug 345] Fixed an xml listing parsing bug
* [bug 309] Hopefully fixed nt4 startup
* Hopefully fixed an issue with downloading international search results from old clients

-- 0.667 2004-11-15 --
* Improved multiple hublist support (thanks garg)
* Fixed some favdirs issues (thanks naga)
* Fixed a status logging issue (thanks naga)
* [bug 289] Fixed annoying login issue
* Added possibility to rename shares (thanks naga and tremor)
* [bug 106] Fixed show joins for fav users (thanks ullner)
* Fixed some unnecessary connects when download slots are full
* Fixed magnet registration issue (thanks garg)
* Some code documentation work (thanks jonathan jansson)
* Makedefs.py fixes (thanks garg)
* A connection attempt is made when you grant a slot to potentially start the other 
  fella's transfers (thanks sed)
* Fixed passive search results issue with international nicks (thanks garg)