@@ -51,16 +51,36 @@
 #endif
 
 const string QueueManager::USER_LIST_NAME = "MyList.DcLst";
-const string QueueManager::TEMP_EXTENSION = ".dctmp";
 
 namespace {
 	const char* badChars = "$|.[]()-_+";
+	const string TEMP_EXTENSION = ".dctmp";
+
+	string getTempName(const string& aFileName, const TTHValue* aRoot) {
+		string tmp(aFileName);
+		if(aRoot != NULL) {
+			TTHValue tmpRoot(*aRoot);
+			tmp += "." + tmpRoot.toBase32();
+		}
+		tmp += TEMP_EXTENSION;
+		return tmp;
+	}
 }
 string QueueItem::getSearchString() const {
 	return SearchManager::clean(getTargetFileName());
 }
 
+namespace {
+}
 
+const string& QueueItem::getTempTarget() {
+	if(!isSet(QueueItem::FLAG_USER_LIST) && tempTarget.empty()) {
+		if(!SETTING(TEMP_DOWNLOAD_DIRECTORY).empty() && (File::getSize(getTarget()) == -1)) {
+			setTempTarget(SETTING(TEMP_DOWNLOAD_DIRECTORY) + getTempName(getTargetFileName(), getTTH()));
+		}
+	}
+	return tempTarget;
+}
 
 QueueItem* QueueManager::FileQueue::add(const string& aTarget, int64_t aSize, 
 						  int aFlags, QueueItem::Priority p, const string& aTempTarget,
@@ -72,11 +92,7 @@ QueueItem* QueueManager::FileQueue::add(const string& aTarget, int64_t aSize,
 	QueueItem* qi = new QueueItem(aTarget, aSize, p, aFlags, aDownloadedBytes, aAdded, root);
 
 	if(!qi->isSet(QueueItem::FLAG_USER_LIST)) {
-		if(aTempTarget.empty()) {
-			if(!SETTING(TEMP_DOWNLOAD_DIRECTORY).empty() && (File::getSize(qi->getTarget()) == -1)) {
-				qi->setTempTarget(SETTING(TEMP_DOWNLOAD_DIRECTORY) + getTempName(qi->getTargetFileName(), root));
-			}
-		} else {
+		if(!aTempTarget.empty()) {
 			qi->setTempTarget(aTempTarget);
 		}
 	}
@@ -387,20 +403,10 @@ void QueueManager::on(TimerManagerListener::Minute, u_int32_t aTick) throw() {
 	}
 }
 
-string QueueManager::getTempName(const string& aFileName, const TTHValue* aRoot) {
-	string tmp(aFileName);
-	if(aRoot != NULL) {
-		TTHValue tmpRoot(*aRoot);
-		tmp += "." + tmpRoot.toBase32();
-	}
-	tmp += TEMP_EXTENSION;
-	return tmp;
-}
-
 void QueueManager::add(const string& aFile, int64_t aSize, User::Ptr aUser, const string& aTarget, 
 					   const TTHValue* root, 
 					   int aFlags /* = QueueItem::FLAG_RESUME */, QueueItem::Priority p /* = QueueItem::DEFAULT */,
-					   const string& aTempTarget /* = Util::emptyString */, bool addBad /* = true */) throw(QueueException, FileException) 
+					   bool addBad /* = true */) throw(QueueException, FileException) 
 {
 	bool wantConnection = true;
 	dcassert((aFile != USER_LIST_NAME) || (aFlags &QueueItem::FLAG_USER_LIST));
@@ -436,7 +442,7 @@ void QueueManager::add(const string& aFile, int64_t aSize, User::Ptr aUser, cons
 
 		QueueItem* q = fileQueue.find(target);
 		if(q == NULL) {
-			q = fileQueue.add(target, aSize, aFlags, p, aTempTarget, 0, GET_TIME(), root);
+			q = fileQueue.add(target, aSize, aFlags, p, Util::emptyString, 0, GET_TIME(), root);
 			fire(QueueManagerListener::Added(), q);
 		} else {
 			if(q->getSize() != aSize) {
@@ -776,8 +782,11 @@ void QueueManager::putDownload(Download* aDownload, bool finished /* = false */)
 				if(!aDownload->isSet(Download::FLAG_TREE_DOWNLOAD))
 					q->setDownloadedBytes(aDownload->getPos());
 				q->setCurrentDownload(NULL);
-				if(q->getDownloadedBytes() > 0)
+				if(q->getDownloadedBytes() > 0) {
 					q->setFlag(QueueItem::FLAG_EXISTS);
+				} else {
+					q->setTempTarget(Util::emptyString);
+				}
 
 				if(q->getPriority() != QueueItem::PAUSED) {
 					for(QueueItem::Source::Iter j = q->getSources().begin(); j != q->getSources().end(); ++j) {
@@ -1004,30 +1013,30 @@ void QueueManager::saveQueue() throw() {
 		string tmp;
 		string b32tmp;
 		for(QueueItem::StringIter i = fileQueue.getQueue().begin(); i != fileQueue.getQueue().end(); ++i) {
-			QueueItem* d = i->second;
-			if(!d->isSet(QueueItem::FLAG_USER_LIST)) {
+			QueueItem* qi = i->second;
+			if(!qi->isSet(QueueItem::FLAG_USER_LIST)) {
 				f.write(STRINGLEN("\t<Download Target=\""));
-				f.write(CHECKESCAPE(d->getTarget()));
+				f.write(CHECKESCAPE(qi->getTarget()));
 				f.write(STRINGLEN("\" Size=\""));
-				f.write(Util::toString(d->getSize()));
+				f.write(Util::toString(qi->getSize()));
 				f.write(STRINGLEN("\" Priority=\""));
-				f.write(Util::toString((int)d->getPriority()));
-				f.write(STRINGLEN("\" TempTarget=\""));
-				f.write(CHECKESCAPE(d->getTempTarget()));
+				f.write(Util::toString((int)qi->getPriority()));
 				f.write(STRINGLEN("\" Added=\""));
-				f.write(Util::toString(d->getAdded()));
-				if(d->getTTH() != NULL) {
+				f.write(Util::toString(qi->getAdded()));
+				if(qi->getTTH() != NULL) {
 					b32tmp.clear();
 					f.write(STRINGLEN("\" TTH=\""));
-					f.write(d->getTTH()->toBase32(b32tmp));
+					f.write(qi->getTTH()->toBase32(b32tmp));
 				}
-				if(d->getDownloadedBytes() != 0) {
+				if(qi->getDownloadedBytes() > 0) {
+					f.write(STRINGLEN("\" TempTarget=\""));
+					f.write(CHECKESCAPE(qi->getTempTarget()));
 					f.write(STRINGLEN("\" Downloaded=\""));
-					f.write(Util::toString(d->getDownloadedBytes()));
+					f.write(Util::toString(qi->getDownloadedBytes()));
 				}
 				f.write(STRINGLEN("\">\r\n"));
 
-				for(QueueItem::Source::List::const_iterator j = d->sources.begin(); j != d->sources.end(); ++j) {
+				for(QueueItem::Source::List::const_iterator j = qi->sources.begin(); j != qi->sources.end(); ++j) {
 					QueueItem::Source* s = *j;
 					f.write(STRINGLEN("\t\t<Source Nick=\""));
 					f.write(CHECKESCAPE(s->getUser()->getNick()));
@@ -1125,10 +1134,10 @@ void QueueLoader::startTag(const string& name, StringPairList& attribs, bool sim
 				return;
 			}
 			QueueItem::Priority p = (QueueItem::Priority)Util::toInt(getAttrib(attribs, sPriority, 3));
-			string tempTarget = getAttrib(attribs, sTempTarget, 4);
-			u_int32_t added = (u_int32_t)Util::toInt(getAttrib(attribs, sAdded, 5));
-			const string& tthRoot = getAttrib(attribs, sTTH, 6);
-			int64_t downloaded = Util::toInt64(getAttrib(attribs, sDownloaded, 6));
+			u_int32_t added = (u_int32_t)Util::toInt(getAttrib(attribs, sAdded, 4));
+			const string& tthRoot = getAttrib(attribs, sTTH, 5);
+			string tempTarget = getAttrib(attribs, sTempTarget, 5);
+			int64_t downloaded = Util::toInt64(getAttrib(attribs, sDownloaded, 5));
 			if (downloaded > size || downloaded < 0)
 				downloaded = 0;
 
@@ -1261,5 +1270,5 @@ void QueueManager::on(TimerManagerListener::Second, u_int32_t aTick) throw() {
 
 /**
  * @file
- * $Id: QueueManager.cpp,v 1.110 2004/11/24 17:00:45 arnetheduck Exp $
+ * $Id: QueueManager.cpp,v 1.111 2004/12/27 22:01:48 arnetheduck Exp $
  */
